--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.1",
+    "@react-navigation/stack": "^6.3.10",
     "expo": "~47.0.8",
+    "expo-font": "^11.0.1",
+    "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
+    "install": "^0.13.0",
     "jotai": "^1.11.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2"
   },
   "devDependencies": {
