--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/stack": "^6.3.10",
     "expo": "~47.0.8",
     "expo-font": "^11.0.1",
+    "expo-linear-gradient": "^12.0.1",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
     "install": "^0.13.0",
@@ -20,7 +21,8 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-responsive-screen": "^1.4.2"
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-svg": "^13.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
