--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~1.4.2",
     "install": "^0.13.0",
     "jotai": "^1.11.2",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-responsive-fontsize": "^0.5.1",
