--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
+    "axios": "^1.2.2",
     "expo": "~47.0.8",
     "expo-font": "^11.0.1",
     "expo-linear-gradient": "^12.0.1",
@@ -26,7 +27,8 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-svg": "^13.6.0",
-    "react-native-toast-notifications": "^3.3.1"
+    "react-native-toast-notifications": "^3.3.1",
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
