--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dropdown-picker": "^5.4.4",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-svg": "^13.6.0",
     "react-native-toast-notifications": "^3.3.1",
     "react-query": "^3.39.2"
