--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
     "axios": "^1.2.2",
@@ -25,6 +26,7 @@
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
