--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trakyamobil",
+  "name": "perakende",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "react-native": "0.70.5",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-responsive-fontsize": "^0.5.1",
